client/src/style.css
@import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
* {
  margin: 0px;
  padding: 0px;
  font-family: monospace;
}

html {
  scroll-behavior: smooth;
}

#content {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  grid-template-rows: repeat(9, 1fr);
  gap: 30px;
  width: 100vw;
  height: 100vh;
  background-color: blueviolet;
  padding: 0px 30px;
}
#moviesSection {
  grid-column: 1 / 11;
  grid-row: 1 / 3;
  background-color: antiquewhite;
}
#booksSection {
  grid-column: 3 / 9;
  grid-row: 3 / 5;
  background-color: black;
}
#calenderSection {
  grid-column: 3 / 9;
  grid-row: 5 / 10;
  background-color: aquamarine;
}
#checklistSection {
  grid-column: 1 / 3;
  grid-row: 3 / 10;
  background-color: brown;
}
#remindersSection {
  grid-column: 9 / 11;
  grid-row: 3 / 10;
  background-color: hotpink;
}

header {
  background-color: goldenrod;
  padding-bottom: 10px;
}

.mainNav {
  position: relative;
  display: flex;
  gap: 36px;
  text-transform: uppercase;
  align-items: center;
  justify-self: center;
  padding-top: 15px;
}

.mainNav div {
  text-decoration: none;
  font-size: 16px;
  font-weight: 700;
}

.mainNav div:hover {
  text-decoration: underline;
}

/*.createButton {}*/

#createButton {
  display: flex;
  align-items: right;
}

.hiddenForm {
  position: relative;
  flex-direction: column;
}

/* css for sign up form */
#sign-up {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}
.userForm {
  background-color: white;
  width: 400px;
  border-radius: 8px;
  padding: 20px 40px;
  box-shadow: 0 10px 25px rgba(92, 99, 105, 0.2);
}
.title {
  font-size: 50px;
  margin-bottom: 50px;
}
.inputContainer {
  position: relative;
  height: 45px;
  width: 90%;
  margin-bottom: 15px;
}
input {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  border: 1px solid #dfdae0;
  border-radius: 7px;
  font-size: 16px;
  padding: 0 20px;
  outline: none;
  background: none;
  z-index: 1;
}
::placeholder {
  color: transparent;
}
.label {
  position: absolute;
  top: 15px;
  left: 15px;
  padding: 0 4px;
  background-color: white;
  color: #dfdae0;
  font-size: 16px;
  transition: 0.5s;
  z-index: 0;
}
.signUpBtn {
  display: block;
  margin-left: auto;
  padding: 15px 30px;
  border: none;
  background-color: #a35f92;
  color: white;
  border-radius: 6px;
  cursor: pointer;
  font-size: 16px;
  margin-top: 30px;
}
.signUpBtn:hover {
  background-color: #d18fc0;
  transform: translateY(-2px);
}
input:focus + .label {
  top: -7px;
  left: 3px;
  z-index: 10;
  font-size: 14px;
  font-weight: 600;
  color: #a35f92;
}
input:focus {
  border: 2px solid #a35f92;
}

input:not(:placeholder-shown) + .label {
  top: -7px;
  left: 3px;
  z-index: 10;
  font-size: 14px;
  font-weight: 600;
}

.hiddenNav {
  display: flex;
  align-items: flex-end;
  flex-direction: column;
  position: absolute;
  right: 5px;
  top: 5px;
  gap: 3px;
}

.createButton {
  width: 135px;
}

.userForm {
  gap: 5px;
}

